# object_detection_in_laser_range_data

./: .gitignore  README.md
laser_segmentation/: CMakeLists.txt  LICENSE.txt  package.xml
laser_segmentation/include/laser_segmentation/: point_type.h  segmenter.h
laser_segmentation/launch/: segmentation.launch
laser_segmentation/src/: laser_segmentation_nodelet.cpp  segmenter.cpp
object_detection/: CMakeLists.txt  package.xml
object_detection/include/object_detection/: detector.h
object_detection/launch/: object_detection.launch  visualize_on_simulated_data.launch  visualize_on_simulated_data.rviz
object_detection/src/: detector.cpp  object_detection_nodelet.cpp
